add mongodd with app

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -38,8 +38,9 @@
 
 
             let result = await response.json();
-        
-            alert(result.message);
+
+            console.log(result)
+            
           };
 
 
