add mongoose connetion

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -32,7 +32,7 @@
 
             console.log('CLICK')
         
-            let response = await fetch('https://faceapimodejs.herokuapp.com/loadimage', {
+            let response = await fetch('https://faceapiinnode.herokuapp.com/loadimage', {
               method: 'POST',
               body: new FormData(formElem)
             });
@@ -55,13 +55,6 @@
 
 
         submitBtn.addEventListener('click', async ()=>{
-            
-        
-    
-            
-
-         
-
 
 
         })
